# truenas-exporter-rs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/: session-start.sh
.claude/rules/: code-style.md  docs-currency.md  metrics-patterns.md  testing-requirements.md
.claude/skills/commit/: SKILL.md
.claude/skills/pr-ready/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: ci.yml  release.yml
config/: Default.toml
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  server.rs  server.rs_helper
src/collectors/: alert.rs  app.rs  boot_pool.rs  cloud_sync.rs  dataset.rs  disk.rs  iscsi.rs  mod.rs  network_interface.rs  nfs.rs  pool.rs  service.rs  share.rs  smart.rs  snapshot.rs  system_info.rs  system_reporting.rs
src/truenas/: client.rs  connection.rs  mod.rs  types.rs
tests/: collectors_test_simple.rs  config_validation_test.rs  edge_cases_test.rs  error_quality_test.rs  integration_test.rs  metrics_test.rs  property_based_test.rs  server_test.rs  types_test.rs
